pod editing, remove synopsis test

--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,7 @@ version          = v0.0.1
 
 [@TestingMania]
 critic_config = perlcritic.rc
-disable       = NoTabsTests
+disable       = NoTabsTests,Test::Synopsis
 
 [AutoMetaResources]
 homepage          = https://metacpan.org/release/%{dist}
@@ -43,3 +43,4 @@ Test::Most = 0.22
 
 [Test::PodSpelling]
 stopwords = Simões
+stopwords = placeable
