--- a/dist.ini
+++ b/dist.ini
@@ -3,9 +3,11 @@ author           = Richard Simões <rsimoes at cpan dot org>
 license          = Artistic_2_0
 copyright_holder = Richard Simões
 copyright_year   = 2011
-version          = v0.0.4
+version          = v0.0.5
 
-[@Basic]
+[@Filter]
+-bundle = @Basic
+-remove = MakeMaker
 
 [@TestingMania]
 disable       = NoTabsTests,Test::Synopsis
@@ -32,6 +34,8 @@ tag_message = %v
 [MetaJSON]
 
 [MinimumPerl]
+
+[ModuleBuild]
 
 [NextRelease]
 
