changed license, first non-point release

--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,9 @@
 name             = Dancer-Session-CHI
 author           = Richard Simões <rsimoes at cpan dot org>
-license          = Artistic_2_0
+license          = LGPL_3_0
 copyright_holder = Richard Simões
 copyright_year   = 2011
-version          = v0.0.5
+version          = v0.1.0
 
 [@Filter]
 -bundle = @Basic
