--- a/perlcritic.rc
+++ b/perlcritic.rc
@@ -1,5 +1,5 @@
 severity = 3
 verbose  = 9
 theme    = core || moose
-exclude  = Subroutines::ProhibitUnusedPrivateSubroutines ValuesAndExpressions::ProhibitVersionStrings
+exclude  = Subroutines::ProhibitUnusedPrivateSubroutines ValuesAndExpressions::ProhibitVersionStrings TestingAndDebugging::RequireUseStrict TestingAndDebugging::RequireUseWarnings
 include  = Variables::ProhibitPackageVars
