rewrite without moose

--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,9 @@
 name             = Dancer-Session-CHI
-author           = Richard Simões <rsimoes at cpan dot org>
+author           = Richard Simões <rsimoes AT cpan DOT org>
 license          = LGPL_3_0
 copyright_holder = Richard Simões
 copyright_year   = 2011
-version          = v0.1.1
+version          = v0.1.2
 
 [@Filter]
 -bundle = @Basic
@@ -18,6 +18,9 @@ repository.github = user:rsimoes
 bugtracker.github = user:rsimoes
 
 [AutoPrereqs]
+skip = ^(?:base|strict|warnings|if|utf8|charnames|open|re|subs|version|Carp|Exporter|File::Spec|File::Spec::Functions|English|POSIX|Params::Check|Dancer::Logger|Dancer::ModuleLoader|Dancer::Config)$
+
+[CoalescePod]
 
 [CheckChangesHasContent]
 
@@ -26,7 +29,6 @@ bugtracker.github = user:rsimoes
 [ExtraTests]
 
 [@Git]
-allow_dirty = Changes
 commit_msg  = %v%n%n%c
 tag_format  = %v
 tag_message = %v
@@ -40,6 +42,10 @@ tag_message = %v
 [NextRelease]
 
 [OurPkgVersion]
+
+[Prereqs]
+Dancer = 1.3095
+
 
 [Test::PodSpelling]
 stopwords = Simões
