--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author           = Richard Simões <rsimoes AT cpan DOT org>
 license          = LGPL_3_0
 copyright_holder = Richard Simões
 copyright_year   = 2011
-version          = v0.1.2
+version          = v0.1.3
 
 [@Filter]
 -bundle = @Basic
@@ -18,7 +18,7 @@ repository.github = user:rsimoes
 bugtracker.github = user:rsimoes
 
 [AutoPrereqs]
-skip = ^(?:base|strict|warnings|if|utf8|charnames|open|re|subs|version|Carp|Exporter|File::Spec|File::Spec::Functions|English|POSIX|Params::Check|Dancer::Logger|Dancer::ModuleLoader|Dancer::Config)$
+skip = ^(?:base|strict|warnings|if|utf8|charnames|open|re|subs|version|Carp|Exporter|File::Spec|File::Spec::Functions|English|POSIX|Params::Check|Dancer::Logger|Dancer::Config|Dancer::ModuleLoader|Dancer::Session::Abstract|Storable)$
 
 [CoalescePod]
 
@@ -45,7 +45,6 @@ tag_message = %v
 
 [Prereqs]
 Dancer = 1.3095
-
 
 [Test::PodSpelling]
 stopwords = Simões
