change license, add purge method

--- a/dist.ini
+++ b/dist.ini
@@ -1,16 +1,17 @@
 name             = Dancer-Session-CHI
 author           = Richard Simões <rsimoes AT cpan DOT org>
-license          = LGPL_3_0
+license          = MIT
 copyright_holder = Richard Simões
-copyright_year   = 2011
-version          = v0.1.4
+copyright_year   = 2013
+version          = v0.1.5
 
 [@Filter]
 -bundle = @Basic
 -remove = MakeMaker
+[ModuleBuild]
 
 [@TestingMania]
-disable       = NoTabsTests,Test::Synopsis
+disable       = Test::Synopsis
 
 [AutoMetaResources]
 homepage          = https://metacpan.org/release/%{dist}
@@ -33,19 +34,15 @@ commit_msg  = %v%n%n%c
 tag_format  = %v
 tag_message = %v
 
-[MetaJSON]
-
 [MinimumPerl]
-
-[ModuleBuild]
 
 [NextRelease]
 
 [OurPkgVersion]
 
 [Prereqs]
-Dancer = 1.3095
+Dancer = 1.3111
 
 [Test::PodSpelling]
-stopwords = Simões
 stopwords = placeable
+stopwords = CHI's
